Compilador2/Generado/gramaticaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from gramatica.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class gramaticaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		RESFUNC=1, RESMAIN=2, RESVAR=3, RESINT=4, RESFLOAT=5, RESSTRING=6, RESBOOL=7, 
		RESRUNE=8, RESSLICE=9, RESINDEX=10, RESSTRINGS=11, RESJOIN=12, RESAPPEND=13, 
		RESTRUE=14, RESFALSE=15, RESSTRUCT=16, RESIF=17, RESELSE=18, RESFOR=19, 
		RESSWITCH=20, RESCASE=21, RESDEFAULT=22, RESRANGE=23, RESRETURN=24, RESBREAK=25, 
		RESCONTINUE=26, RESFMT=27, RESPRINTLN=28, RESSTR=29, RESATOI=30, RESPARSEFLOAT=31, 
		RESREFLECT=32, RESTYPEOF=33, IDENTIFICADOR=34, INT=35, FLOAT=36, CADENA=37, 
		RUNE=38, ESPACIO=39, COMENTARIO=40, PARABRE=41, PARCIERRA=42, LLAVEABRE=43, 
		LLAVECIERRA=44, CORABRE=45, CORCIERRA=46, PUNTO_COMA=47, DOS_PUNTOS=48, 
		SIGNO_MULTI=49, SIGNO_DIV=50, SIGNO_ASIGNACION_INCREMENTO=51, SIGNO_ASIGNACION_DECREMENTO=52, 
		SIGNO_MAS=53, SIGNO_MENOS=54, SIGNO_AND=55, SIGNO_OR=56, SIGNO_NO_IGUAL=57, 
		SIGNO_NOT=58, SIGNO_IGUALDAD=59, SIGNO_ASIGNACION=60, SIGNO_MENOSQUE_IGUAL=61, 
		SIGNO_MENOSQUE=62, SIGNO_MASQUE_IGUAL=63, SIGNO_MASQUE=64, SIGNO_COMA=65, 
		SIGNO_MODULO=66, PUNTO=67;
	public const int
		RULE_prog = 0, RULE_lista_declaracion = 1, RULE_declaracion_variable = 2, 
		RULE_declaracion_funcion = 3, RULE_lista_instrucciones = 4, RULE_lista_sentencia = 5, 
		RULE_sentencia_asignacion = 6, RULE_sentencia_if = 7, RULE_bloque_if = 8, 
		RULE_bloque_if_else = 9, RULE_bloque_else = 10, RULE_sentencia_for = 11, 
		RULE_sentencia_switch = 12, RULE_bloque_caso = 13, RULE_bloque_default = 14, 
		RULE_sentecia_return = 15, RULE_sentencia_break = 16, RULE_sentencia_continue = 17, 
		RULE_llamada_funcion = 18, RULE_funcion_embedida = 19, RULE_lista_argumentos = 20, 
		RULE_lista_parametros = 21, RULE_parametro = 22, RULE_declaracionSlice = 23, 
		RULE_lista_slice = 24, RULE_slice_tipo = 25, RULE_expresion = 26, RULE_tipo = 27;
	public static readonly string[] ruleNames = {
		"prog", "lista_declaracion", "declaracion_variable", "declaracion_funcion", 
		"lista_instrucciones", "lista_sentencia", "sentencia_asignacion", "sentencia_if", 
		"bloque_if", "bloque_if_else", "bloque_else", "sentencia_for", "sentencia_switch", 
		"bloque_caso", "bloque_default", "sentecia_return", "sentencia_break", 
		"sentencia_continue", "llamada_funcion", "funcion_embedida", "lista_argumentos", 
		"lista_parametros", "parametro", "declaracionSlice", "lista_slice", "slice_tipo", 
		"expresion", "tipo"
	};

	private static readonly string[] _LiteralNames = {
		null, "'func'", "'main'", "'var'", "'int'", "'float64'", "'string'", "'bool'", 
		"'rune'", "'slices'", "'Index'", "'strings'", "'Join'", "'append'", "'true'", 
		"'false'", "'struct'", "'if'", "'else'", "'for'", "'switch'", "'case'", 
		"'default'", "'range'", "'return'", "'break'", "'continue'", "'fmt'", 
		"'Println'", "'strconv'", "'Atoi'", "'ParseFloat'", "'reflect'", "'TypeOf'", 
		null, null, null, null, null, null, null, "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "':'", "'*'", "'/'", "'+='", "'-='", "'+'", "'-'", 
		"'&&'", "'||'", "'!='", "'!'", "'=='", "'='", "'<='", "'<'", "'>='", "'>'", 
		"','", "'%'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "RESFUNC", "RESMAIN", "RESVAR", "RESINT", "RESFLOAT", "RESSTRING", 
		"RESBOOL", "RESRUNE", "RESSLICE", "RESINDEX", "RESSTRINGS", "RESJOIN", 
		"RESAPPEND", "RESTRUE", "RESFALSE", "RESSTRUCT", "RESIF", "RESELSE", "RESFOR", 
		"RESSWITCH", "RESCASE", "RESDEFAULT", "RESRANGE", "RESRETURN", "RESBREAK", 
		"RESCONTINUE", "RESFMT", "RESPRINTLN", "RESSTR", "RESATOI", "RESPARSEFLOAT", 
		"RESREFLECT", "RESTYPEOF", "IDENTIFICADOR", "INT", "FLOAT", "CADENA", 
		"RUNE", "ESPACIO", "COMENTARIO", "PARABRE", "PARCIERRA", "LLAVEABRE", 
		"LLAVECIERRA", "CORABRE", "CORCIERRA", "PUNTO_COMA", "DOS_PUNTOS", "SIGNO_MULTI", 
		"SIGNO_DIV", "SIGNO_ASIGNACION_INCREMENTO", "SIGNO_ASIGNACION_DECREMENTO", 
		"SIGNO_MAS", "SIGNO_MENOS", "SIGNO_AND", "SIGNO_OR", "SIGNO_NO_IGUAL", 
		"SIGNO_NOT", "SIGNO_IGUALDAD", "SIGNO_ASIGNACION", "SIGNO_MENOSQUE_IGUAL", 
		"SIGNO_MENOSQUE", "SIGNO_MASQUE_IGUAL", "SIGNO_MASQUE", "SIGNO_COMA", 
		"SIGNO_MODULO", "PUNTO"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "gramatica.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static gramaticaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public gramaticaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public gramaticaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESFUNC() { return GetToken(gramaticaParser.RESFUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESMAIN() { return GetToken(gramaticaParser.RESMAIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARABRE() { return GetToken(gramaticaParser.PARABRE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARCIERRA() { return GetToken(gramaticaParser.PARCIERRA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_instruccionesContext lista_instrucciones() {
			return GetRuleContext<Lista_instruccionesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(gramaticaParser.Eof, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgramaticaVisitor<TResult> typedVisitor = visitor as IgramaticaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(RESFUNC);
			State = 57;
			Match(RESMAIN);
			State = 58;
			Match(PARABRE);
			State = 59;
			Match(PARCIERRA);
			State = 60;
			lista_instrucciones();
			State = 61;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_declaracionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Declaracion_variableContext declaracion_variable() {
			return GetRuleContext<Declaracion_variableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Declaracion_funcionContext declaracion_funcion() {
			return GetRuleContext<Declaracion_funcionContext>(0);
		}
		public Lista_declaracionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_declaracion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.EnterLista_declaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.ExitLista_declaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgramaticaVisitor<TResult> typedVisitor = visitor as IgramaticaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_declaracion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_declaracionContext lista_declaracion() {
		Lista_declaracionContext _localctx = new Lista_declaracionContext(Context, State);
		EnterRule(_localctx, 2, RULE_lista_declaracion);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RESVAR:
			case IDENTIFICADOR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63;
				declaracion_variable();
				}
				break;
			case RESFUNC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64;
				declaracion_funcion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Declaracion_variableContext : ParserRuleContext {
		public Declaracion_variableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracion_variable; } }
	 
		public Declaracion_variableContext() { }
		public virtual void CopyFrom(Declaracion_variableContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DeclaracionVariableContext : Declaracion_variableContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESVAR() { return GetToken(gramaticaParser.RESVAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFICADOR() { return GetToken(gramaticaParser.IDENTIFICADOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIGNO_ASIGNACION() { return GetToken(gramaticaParser.SIGNO_ASIGNACION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpresionContext expresion() {
			return GetRuleContext<ExpresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PUNTO_COMA() { return GetToken(gramaticaParser.PUNTO_COMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOS_PUNTOS() { return GetToken(gramaticaParser.DOS_PUNTOS, 0); }
		public DeclaracionVariableContext(Declaracion_variableContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.EnterDeclaracionVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.ExitDeclaracionVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgramaticaVisitor<TResult> typedVisitor = visitor as IgramaticaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracionVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Declaracion_variableContext declaracion_variable() {
		Declaracion_variableContext _localctx = new Declaracion_variableContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaracion_variable);
		int _la;
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RESVAR:
				_localctx = new DeclaracionVariableContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				Match(RESVAR);
				State = 68;
				Match(IDENTIFICADOR);
				State = 69;
				tipo();
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SIGNO_ASIGNACION) {
					{
					State = 70;
					Match(SIGNO_ASIGNACION);
					State = 71;
					expresion(0);
					}
				}

				State = 75;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 74;
					Match(PUNTO_COMA);
					}
					break;
				}
				}
				break;
			case IDENTIFICADOR:
				_localctx = new DeclaracionVariableContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				Match(IDENTIFICADOR);
				State = 78;
				Match(DOS_PUNTOS);
				State = 79;
				Match(SIGNO_ASIGNACION);
				State = 80;
				expresion(0);
				State = 82;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 81;
					Match(PUNTO_COMA);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Declaracion_funcionContext : ParserRuleContext {
		public Declaracion_funcionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracion_funcion; } }
	 
		public Declaracion_funcionContext() { }
		public virtual void CopyFrom(Declaracion_funcionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DeclaracionFuncionContext : Declaracion_funcionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESFUNC() { return GetToken(gramaticaParser.RESFUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFICADOR() { return GetToken(gramaticaParser.IDENTIFICADOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARABRE() { return GetToken(gramaticaParser.PARABRE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARCIERRA() { return GetToken(gramaticaParser.PARCIERRA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_instruccionesContext lista_instrucciones() {
			return GetRuleContext<Lista_instruccionesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_parametrosContext lista_parametros() {
			return GetRuleContext<Lista_parametrosContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		public DeclaracionFuncionContext(Declaracion_funcionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.EnterDeclaracionFuncion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.ExitDeclaracionFuncion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgramaticaVisitor<TResult> typedVisitor = visitor as IgramaticaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracionFuncion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Declaracion_funcionContext declaracion_funcion() {
		Declaracion_funcionContext _localctx = new Declaracion_funcionContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaracion_funcion);
		int _la;
		try {
			_localctx = new DeclaracionFuncionContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(RESFUNC);
			State = 87;
			Match(IDENTIFICADOR);
			State = 88;
			Match(PARABRE);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFICADOR) {
				{
				State = 89;
				lista_parametros();
				}
			}

			State = 92;
			Match(PARCIERRA);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35201551959024L) != 0)) {
				{
				State = 93;
				tipo();
				}
			}

			State = 96;
			lista_instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_instruccionesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LLAVEABRE() { return GetToken(gramaticaParser.LLAVEABRE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LLAVECIERRA() { return GetToken(gramaticaParser.LLAVECIERRA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_sentenciaContext[] lista_sentencia() {
			return GetRuleContexts<Lista_sentenciaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_sentenciaContext lista_sentencia(int i) {
			return GetRuleContext<Lista_sentenciaContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_declaracionContext[] lista_declaracion() {
			return GetRuleContexts<Lista_declaracionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_declaracionContext lista_declaracion(int i) {
			return GetRuleContext<Lista_declaracionContext>(i);
		}
		public Lista_instruccionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_instrucciones; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.EnterLista_instrucciones(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IgramaticaListener typedListener = listener as IgramaticaListener;
			if (typedListener != null) typedListener.ExitLista_instrucciones(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IgramaticaVisitor<TResult> typedVisitor = visitor as IgramaticaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_instrucciones(this);
			else return visitor.VisitChildren(this);
		}
	}
